# accumulate-python-sdk

./: .coverage  .coveragerc  .env.local  .gitignore  =0.14.0  =11.0.0  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_PARITY_REPORT.md  LICENSE  MANIFEST.in  PRODUCTION_READY_REPORT.md  README.md  REGENERATION_GUIDE.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml  pytest.ini  pytest_old.ini
.github/workflows/: ci.yml  publish.yml
docs/: README.md  accumulate_client_client_streaming.md  accumulate_client_monitoring_exporters.md  accumulate_client_monitoring_instrumentation.md  accumulate_client_monitoring_metrics.md  accumulate_client_performance_batch.md  accumulate_client_performance_pipeline.md  accumulate_client_performance_pool.md  accumulate_client_recovery_circuit_breaker.md  accumulate_client_recovery_replay.md  accumulate_client_recovery_retry.md  accumulate_client_transport_ws.md  index.md
examples/: .gitignore  01_lite_and_faucet.py  02_create_adi_and_buy_credits_backup.py  04_data_account_and_write_backup.py  100_keygen_lite_urls.py  120_faucet_local_devnet.py  210_buy_credits_lite.py  999_zero_to_hero.py  999_zero_to_hero_old.py  README.md  ZERO_TO_HERO.md  _common_backup.py  _common_broken.py  _common_broken2.py  debug_mock_client.py  debug_transaction.py  error_recovery_demo.py  high_performance_submission.py  shared_helpers.py  stream_blocks_and_txs.py
examples/v3/: debug_faucet.py  example_01_lite_identities.py  example_02_accumulate_identities.py  example_03_adi_token_accounts.py  example_04_data_accounts_entries.py  example_05_adi_to_adi_transfer.py  example_06_custom_tokens.py  example_07_custom_tokens.py  example_08_query_tx_signatures.py  example_09_key_management.py  example_10_update_key_page_threshold.py  example_11_multi_signature_types.py  example_12_quickstart_demo.py  example_13_adi_to_adi_transfer_with_header_options.py  example_14_low_level_adi_creation.py
reports/: test_env_snapshot.json
scripts/: README.md  analyze_and_repair.py  auto_fix.py  fix_all_tests_until_green.py  gen_golden.py  gen_types_from_manifest.py  green_gate.py  list_rpc_methods.py  make_docs.py  parity_sync.py  run_again_devnet.py  run_parity_gate.ps1  run_parity_suite.py  selfcheck.py  test_failure_atlas.py
src/accumulate_client/: README.md  __init__.py  _version.py  amounts.py  api_client.py  canonjson.py  client.py  client_compat.py  client_mock.py  client_test.py  compat.py  convenience.py  enums.py  facade.py  generated_client.py  json_rpc_client.py  signatures.py  transactions.py  types.py  wallet.py
tests/: README.md  conftest.py  test_basic_functionality.py  test_functionality.py  test_helpers.py  test_import.py  test_transaction_header_fields.py
tests/_autofix/: README.txt
tests/client/: test_api_methods_smoke.py  test_api_parity.py  test_error_mapping.py  test_transport_retry.py
tests/codec/: test_canonical_json_and_binary.py
tests/conformance/: __init__.py  test_binary_parity.py  test_canonical_json_parity.py  test_crypto_conformance.py  test_ed25519_negatives.py  test_hash_and_sig_parity.py  test_transaction_codec_edges.py  test_ts_parity.py  test_type_manifest_complete.py
tests/coverage/: test_enums_and_types_counts.py  test_public_api_surface.py
tests/coverage_boost/: test_builders_matrix.py  test_codec_roundtrip.py  test_signers_and_keys.py  test_url_and_encoding.py  test_validation_and_fees.py
tests/crypto/: test_ed25519_and_legacy.py
tests/examples/: test_examples_mock_smoke.py  test_examples_mock_smoke_backup.py
tests/facade/: __init__.py  test_facade.py
tests/fuzz/: __init__.py  _stats.json  test_fuzz_roundtrip_from_dart.py  test_tx_roundtrip_fuzz.py
tests/golden/: README.md  __init__.py  ed25519_vectors.json  envelope_fixed.golden.json  fuzz_vectors.jsonl  index.json  rand_vectors.jsonl  sig_ed25519.golden.json  ts_parity_fixtures.json  tx_only.golden.json  tx_signing_vectors.json
tests/helpers/: __init__.py  crypto_helpers.py  factories.py  mocks.py  mocks_backup2.py  mocks_old.py  parity.py
tests/integration/: test_devnet_integration.py  test_zero_to_hero_devnet.py
tests/introspection/: collect_types.py  generate_minimal_examples.py  type_manifest.json
tests/operations/: test_operations.py
tests/performance/: test_pool_batch.py
tests/recovery/: test_retry_circuit_breaker.py
tests/repo/: test_coverage_gate.py  test_no_todos_and_stubs.py
tests/runtime/: test_retry_circuit_replay_metrics.py
tests/signers/: __init__.py  test_delegated_functionality.py  test_delegation_resolution.py  test_multisig_sets.py  test_new_signers.py  test_optional_fields.py  test_signature_types.py
tests/streaming/: test_ws_client.py  test_ws_client_fixed.py  test_ws_client_fixed_proper.py  test_ws_client_fully_fixed.py  test_ws_client_indent_fixed.py  test_ws_client_properly_fixed.py  test_ws_loopback_mock.py  test_ws_offline_and_mock.py
tests/transactions/: __init__.py  test_body_fields.py
tests/tx/: test_builder_parametric_roundtrip.py  test_builders_roundtrip.py  test_context.py  test_execute_harness.py  test_fees.py  test_header.py  test_validation.py  test_validation_and_fees_matrix.py  test_voting.py
tests/unit/: test_batcher_pipeline_shapes.py  test_batcher_pipeline_shapes_original.py  test_client_basic.py  test_client_public_api.py  test_client_public_api_original.py  test_codec_roundtrip_parity.py  test_json_rpc_client.py  test_retry_breaker_metrics_surface.py  test_signers_ed25519_legacy.py  test_types_roundtrip.py
tests/v2/: __init__.py  test_client.py
tests/v3/: __init__.py  test_client.py  test_options.py
tests/wallet/: test_wallet_keystore.py
tool/: devnet_discovery.py
tooling/: README.md  generate_fuzz_vectors.py
tooling/internal-examples/: 02_create_adi_and_buy_credits.py  03_token_account_and_transfer.py  04_data_account_and_write.py  100_keygen_lite_urls.py  120_faucet_local_devnet.py  210_buy_credits_lite.py  999_zero_to_hero.py  _common.py  basic_usage.py  error_recovery_demo.py  faucet_and_create_token_account.py  multisig_transfer_tokens.py  (+2 more)
tools/: generate_fuzz_vectors.py
(+159 files in other folders)
