[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accumulate-client"
version = "1.0.0"
description = "Python client for Accumulate blockchain JSON-RPC API "
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Accumulate Foundation", email = "support@accumulatenetwork.io"},
]
keywords = ["blockchain", "accumulate", "jsonrpc", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "cryptography>=3.4.0",
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://accumulatenetwork.io"
Documentation = "https://docs.accumulatenetwork.io"
Repository = "https://github.com/AccumulateNetwork/accumulate"
"Bug Tracker" = "https://github.com/AccumulateNetwork/accumulate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/accumulate_client"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true